TEST_PROGRAMS/INVALID/remi_bernard/newline.min
# Newline in string literal
a = "
";

